--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -6,12 +6,22 @@
 
     <ImageView
         android:id="@+id/fruit_image"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/fruit_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        />
+    <Button
+        android:id="@+id/fruit_button"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="ClickMe"
+        android:focusable="false"
         />
 </LinearLayout>
